--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [pycodestyle]
-max-line-length = 170
-pep8maxlinelength = 170
+max-line-length = 79
+pep8maxlinelength = 79
 
 [flake8]
-max-line-length=170
+max-line-length = 79
+# Ignore common patterns
+ignore = W503, E203
+exclude = migrations, staticfiles, .venv, env.py
